--- a/index.html
+++ b/index.html
@@ -32,53 +32,62 @@
   <title>Test MiniCSS</title>
 </head>
 
-<body>
-  <div class="container">
-    <div class="row">
-        <div class="col-sm-1">
-            <h6>REDSHIFT<small>today</small></h6>
-        </div>
-        <div class="col-sm-9">
-            <h6>SYNTAXVAL<small class="xlm-account-number"></small></h6>
-        </div>
-        <div class="col-sm-1">
-            <button id="button-update" class="small tertiary">Update</button>
-        </div>
-        <div class="col-sm-1">
-            <h6><div class="input-group">
-                <input type="checkbox" id="test-net-switch" tabindex="0">
-                <label for="test-net-switch" class="switch">testnet</label>
-            </div></h6>
-        </div>
-    </div>
-  </div>
+    <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-          <div class="blue-box">Asset Sheet</div>
-      </div>
-      <div class="col-sm-4">
-          <div class="blue-box">Balance <small>(Native)</small></div>
-      </div>
-      <div class="col-sm-4">
-          <div class="blue-box">Market Value <small>(EUR)</small></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-4">
-          <div class="white-box">Stellar Lumens <small>(XLM)</small></div>
-      </div>
-      <div class="col-sm-4">
-          <div class="white-box"><span class="xlm-balance">0.00</span></div>
-      </div>
-      <div class="col-sm-4">
-          <div class="white-box"><span class="xlm-balance-eur">0.00</span> &euro;</div>
-      </div>
-    </div>
+        <!-- HEADER TEMPLATE -->
+        <script id="header-template" type="text/x-handlebars-template">
+            <div class="row">
+                <div class="col-sm-1">
+                    <h6>REDSHIFT<small>today</small></h6>
+                </div>
+                <div class="col-sm-9">
+                    <h6>{{username}}<small class="xlm-account-number"></small></h6>
+                </div>
+                <div class="col-sm-1">
+                    <button id="button-update" class="small tertiary">Update</button>
+                </div>
+                <div class="col-sm-1">
+                    <h6><div class="input-group">
+                        <input type="checkbox" id="test-net-switch" tabindex="0">
+                        <label for="test-net-switch" class="switch">testnet</label>
+                    </div></h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="blue-box">Asset Sheet</div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="blue-box">Balance</div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="blue-box">Market Value</div>
+                </div>
+            </div>
+        </script>
 
-  </div>
-</body>
-<script src="./js/lib/require.js"></script>
-<script src="./js/redshift.js"></script>
+        <!-- BODY TEMPLATE -->
+        <script id="body-template" type="text/x-handlebars-template">
+            {{#each assets}}
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="white-box">{{asset_type}} <small>({{asset_code}})</small></div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="white-box"><span class="xlm-balance">{{balance}}</span></div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="white-box"><span class="{{asset_type}}-balance-eur"></span> &euro;</div>
+                </div>
+            </div>
+            {{/each}}
+        </script>
+
+        <div class="container header"></div>
+        <div class="container body"></div>
+        <div class="container footer"></div>
+
+    </body>
+    <script src="./js/lib/require.js"></script>
+    <script src="./js/redshift.js"></script>
 </html>
